Fixed SF#2014907 View users page not showing all users

--- a/htdocs/styles/sitbase.css
+++ b/htdocs/styles/sitbase.css
@@ -363,8 +363,7 @@ em.updatedveryrecently { color: #640000; }
 em.updatedrecently { }
 
 p#pageoptions { float: right; top: -10px; position: relative; }
-form.filterform { margin-left: auto; margin-right: auto; margin-bottom: 1em; }
-form.filterform { margin-left: auto; margin-right: auto; margin-bottom: 1em; }
+form.filterform { margin-left: auto; margin-right: auto; margin-bottom: 1em; width: 50%; text-align: center; }
 
 .search_highlight { background: #FFFACD; font-weight: bolder; }
 
